k8s/apps/mfe-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-api
spec:
  selector:
    app: mfe-api
  ports:
    - port: 4000
      targetPort: 4000
